# jjscratch

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
assets/fonts/: NotoSansSymbols-OFL.txt
docs/: RUNNING.md
docs/parity/: README.md
docs/parity/interaction/: nav.txt
docs/perf/: reactivity.md
docs/qa/: dpi-sizes.md  reftest.md  results.tsv
docs/reference/: README.md
docs/research/: compare2-revisions.json  parity-aa-kerning.md
docs/spec/: jjlib-api.md  ui-spec.md
docs/stress/: graph-stress-report.md
fixture/: jjconfig.toml
fixture-conflict/: jjconfig.toml
fixture-conflict/repo/: greeting.txt
fixture-conflict/repo/.jj/working_copy/: checkout  tree_state
fixture/repo/: README.md
fixture/repo/.jj/repo/store/git/: config
fixture/repo/.jj/working_copy/: checkout  tree_state
fixture/repo/src/: cli.rs  main.rs
scripts/: compare-interaction.sh  gen-random-repos.sh  lightjj-shot.mjs  make-conflict-fixture.sh  make-fixture.sh  parity.sh  reference.sh  sizecheck.sh  sizecheck_check.py
src/: graph_layout.rs  input.rs  lib.rs  model.rs  render.rs  text.rs  theme.rs  ui.rs  watch.rs  window.rs
src/model/: jjlib.rs  mock.rs
src/ui/: branches.rs  diff.rs  graph.rs  oplog.rs  palette.rs
tests/: reftest.rs
tools/parity/: compare.py  compare2.py  drive-lightjj.mjs
