[package]
name = "jjscratch"
version = "0.1.0"
edition = "2021"
description = "jjscratch — a native, GPU-rendered Jujutsu client (Vello + wgpu). UI copy of lightjj."

[features]
# The real jj-lib backend is heavy to compile; keep it opt-in so renderer work
# iterates against the mock. `cargo build --features jjlib` enables it.
default = []
jjlib = ["dep:jj-lib", "dep:futures"]

[dependencies]
vello = "0.9"
# skrifa pinned to the same version vello 0.9 uses, for glyph metrics / charmap
# (vello does not re-export it). Keep in lockstep with vello's skrifa dep.
skrifa = "0.42"
pollster = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
anyhow = "1"
# Cross-platform recursive filesystem watcher for real-time reactivity: watch a
# repo's `.jj/` dir and re-render on change. Always on — the watcher itself is
# backend-agnostic; the reactive reload it drives is only wired under `jjlib`.
notify = "8"

# Backend (opt-in via `jjlib` feature). Pinned to match the fixture's jj 0.42.
jj-lib = { version = "0.42", optional = true }
futures = { version = "0.3", optional = true }

[[bin]]
name = "shot"
path = "src/bin/shot.rs"

# Watch demo: tails a repo's `.jj/` and reloads on each change (jjlib-only).
[[bin]]
name = "watch-demo"
path = "src/bin/watch_demo.rs"
required-features = ["jjlib"]

# Perf harness: generates tiny / huge-diff / large-log scenarios and reports
# p50/p99 latency + a per-stage breakdown (jjlib-only).
[[bin]]
name = "perf-harness"
path = "src/bin/perf_harness.rs"
required-features = ["jjlib"]

# Churn test: hammers a repo with concurrent fs/jj churn while the reactive
# reload loop runs, verifying coalescing / bounded memory / recovery (jjlib-only).
[[bin]]
name = "churn-test"
path = "src/bin/churn_test.rs"
required-features = ["jjlib"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
